Add: The best books on Logic recommended by Tom Stoneham

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -317,6 +317,18 @@
         <i class="booktitle">Mathematical Logic for Computer Science</i>. Third edition. Springer, 2012. (346 pages)
         <a href="https://www.springer.com/gp/book/9781447141280"><abbr>ISBN</abbr> 978-1-4471-4128-0</a>.
       </li>
+      <li>
+        <a href="https://fivebooks.com/best-books/logic-tom-stoneham/">The best books on Logic recommended by Tom Stoneham</a>,
+        <i class="website">Five Books</i>, 13.12.2019.
+        <br />Tom Stoneham, author of <i class="booktitle">Berkeley's World: An Examination of the Three Dialogues</i>, recommends the following books:
+        <ul>
+          <li><i class="booktitle">Logic Primer</i> by Colin Allen and Michael Hand (Stoneham taught from this book for over a decade),</li>
+          <li><i class="booktitle">Logic</i> by Wilfrid Hodges,</li>
+          <li><i class="booktitle">Paradoxes</i> by Mark Sainsbury,</li>
+          <li><i class="booktitle">Tractatus Logico-Philosophicus</i> by Ludwig Wittgenstein,</li>
+          <li><i class="booktitle">Philosophy of Logic</i> by Willard Van Orman Quine.</li>
+        </ul>
+      </li>
     </ul>
 
     <h2>Cognitive Biases, Fallacies and Thinking Errors</h2>
