Add: Open University: Global Ethics: An Introduction

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -86,6 +86,11 @@
         <i class="booktitle">Ethical Theory: An Anthology</i>. Second edition. Wiley-Blackwell, 2012. (816 pages)
         <a href="https://www.wiley.com/en-gb/Ethical+Theory%3A+An+Anthology%2C+2nd+Edition-p-9780470671603"><abbr>ISBN</abbr> 978-0-470-67160-3</a>.
       </li>
+      <li>
+        <a href="https://www.futurelearn.com/courses/global-ethics">Global Ethics: An Introduction</a>:
+        a free online course by The Open University that is hosted on FutureLearn.
+        It is a four-week course that requires three hours of study per week.
+      </li>
     </ul>
 
     <h2>Ethics or Morality Without Religion</h2>
