Add: Introduction to Korean Philosophy on FutureLearn

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2656,6 +2656,11 @@
           <i class="booktitle">Un si funeste désir</i>. (1963) Collection L'Imaginaire. Gallimard, 1994. (224 pages)
           <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/L-Imaginaire/Un-si-funeste-desir" hreflang="fr"><abbr>ISBN</abbr> 9782070737420</a>.
         </li>
+        <li>
+          <a href="https://www.futurelearn.com/courses/what-is-korean-philosophy">Introduction to Korean Philosophy</a>:
+          an online course by Sungkyunkwan University that is hosted on FutureLearn.
+          It is a four-week course that requires two hours of study per week.
+        </li>
       </ul>
     </section>
 
