Add: Why Religion Matters (FutureLearn)

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -877,6 +877,11 @@
           is part of the status quo that six Christian religions agreed to in 1757. There have something been fights between representatives
           of some of these religions, for example over moving a chair &hellip;
         </li>
+        <li>
+          <a href="https://www.futurelearn.com/courses/why-religion-matters">Why Religion Matters: Religious Literacy, Culture and Diversity</a>:
+          an online course by The Open University that is hosted on FutureLearn
+          It is a four-week course that requires three hours of study per week.
+        </li>
 
         <li>Roth, Philip:
           <span lang="fr"><a href="https://www.monde-diplomatique.fr/mav/145/ROTH/54571" hreflang="fr">Plaidoyer athéiste</a>,
