Various minor edits

--- a/complaint-form.html
+++ b/complaint-form.html
@@ -21,8 +21,8 @@
   </script>
   <style>
     .invisible { color: transparent; font-size: 0.1em; }
-    @media only screen and (max-device-width: 480px) {
-      .philosophypage header { background-image: none; width: 100%; height: auto; background-color: #09316; }
+    @media only screen and (max-width: 480px) {
+      .philosophypage header { background-image: none; width: 100%; height: auto; background-color: #09316D; }
       .philosophypage h1 { font-size: 1.8em; height: auto; margin: 0; }
       .philosophypage h1, .philosophypage h1 * { background-color: transparent; color: white; }
       header, nav, main, footer { width: 90%; }
@@ -30,7 +30,7 @@
       form p.narrow { display: block; }
       form p.wide { display: none; }
     }
-    @media only screen and (min-device-width: 480px) {
+    @media only screen and (min-width: 480px) {
       form p.narrow { display: none; }
       form p.wide { display: block; }
     }
@@ -50,7 +50,7 @@
           <option value="" selected="selected">Select your preferred excuse</option>
           <option value="book">I want to report something about a book</option>
           <option value="rant">Nothing in particular. I just enjoy a good rant.</option>
-          <option value="doom">The world is doomed :-(</option>
+          <option value="doom">The world is doomed!</option>
           <option value="dang">Just let me write the dang complaint!</option>
         </select>
       </p>
@@ -59,14 +59,14 @@
           <option value="" selected="selected">Select complaint type</option>
           <option value="book-m">Something about a book</option>
           <option value="rant-m">I just enjoy a good rant.</option>
-          <option value="doom-m">The world is doomed :-(</option>
+          <option value="doom-m">The world is doomed!</option>
           <option value="dang-m">Damnit!</option>
         </select>
       </p>
-      <p><label for="therant">Get creative here. Write at least 1024 characters<span class="invisible">*</span>:</p>
-        <textarea id="therant" minlength="1024" placeholder="Dies iræ, dies illa&#013;Solvet sæclum in favilla,&#013;Teste David cum Sibylla. " required="required" rows="128" cols="40"></textarea>
+      <p><label for="therant">Get creative here. Write at least 1024 characters<span class="invisible">*</span>:</label>
+        <textarea id="therant" minlength="1024" placeholder="Dies iræ, dies illa&#013;Solvet sæclum in favilla,&#013;Teste David cum Sibylla. " required="required" rows="128" cols="60"></textarea>
       </p>
-      <p><button type="submit">Submit complaint</button></p>
+      <p><button id="submit" type="submit">Submit complaint</button></p>
     </form>
   </main>
 
@@ -74,7 +74,7 @@
     <p class="licence">
       <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>
       <br />
-      <a href="index.html">Philosophy and Science</a>
+      <span class="sitename"><a href="index.html">Philosophy and Science</a></span>
       by
       <a href="https://github.com/cstrobbe">Christophe Strobbe</a>
       is licensed under a
