Add: Felluga: Introductory Guide to Critical Theory

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1330,6 +1330,13 @@
           Routledge, 2015. (400 pages)
           <a href="https://www.routledge.com/Critical-Theory-The-Key-Concepts/Felluga/p/book/9780415695657"><abbr>ISBN</abbr> 9780415695657</a>.
         </li>
+        <li>Felluga, Dino Franco:
+          <a href="https://cla.purdue.edu/academic/english/theory/">Introductory Guide to Critical Theory</a>,
+          <i class="website">Purdue University</i>.
+          Felluga started creating this site in 2001 but it is no longer being updated since most of the material (and much more) has been
+          included in the book <i class="booktitle">Critical Theory: The Key Concepts</i> (2015).
+          (See also this <a href="https://cla.purdue.edu/academic/english/theory/introduction/Showalter.html">Elaine Showalter's comment in <i class="booktitle">Teaching Literature</i></a>.)
+        </li>
         <li>Fraser, Nancy; Jaeggi, Rahel:
           <i class="booktitle">Capitalism: A Conversation in Critical Theory</i>.
           Polity Press, 2018. (224 pages)
