Add: Bererhi et al: Quand les Algériens lisent Camus

--- a/lijst.html
+++ b/lijst.html
@@ -433,6 +433,11 @@
   <section id="literature">
     <h2>Literature</h2>
     <ul>
+      <li><span lang="fr">Bererhi, Afifa; Azza-Bekkat, Amina; Mohammedi-Tabti, Bouba:
+        <a href="" hreflang="fr"><i class="booktitle">Quand les Algériens lisent Camus</i>. Alger: Casbah Editions</a>,</span> 2015.
+        <abbr>ISBN</abbr> 9947620212.
+        <!--Worldcat: https://www.worldcat.org/title/quand-les-algeriens-lisent-camus/oclc/908678194 -->
+      </li>
       <li><span lang="fr">Pivot, Bernard; Pivot, Cécile:
         <i class="booktitle">Lire !</i>. Flammarion,</span> 2018. (192 pages)
         <a href="https://editions.flammarion.com/lire/9782081416307" hreflang="fr"><abbr>ISBN</abbr> 9782081416307</a>.
