Remove dct and cc XML namespaces

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml" xmlns:dct="http://purl.org/dc/terms/" xmlns:cc="http://creativecommons.org/ns#">
+<html lang="en-GB" xml:lang="en-GB" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
   <!--meta charset="utf-8" /--><!-- Either this line or the above! http://www.w3.org/TR/html-polyglot/ -->
@@ -256,15 +256,13 @@
 
   <footer>
     <p class="licence">
-      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img 
-      alt="Creative Commons License" style="border-width:0" 
-      src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />
-      <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" 
-      property="dct:title" rel="dct:type">Philosophy and Science</span> by 
-      <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/cstrobbe" property="cc:attributionName" 
-      rel="cc:attributionURL">Christophe Strobbe</a> is licensed under a 
-      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" 
-      lang="en-US">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
+      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>
+      <br />
+      <span class="sitename"><a href="http://cstrobbe.github.io/philosophy-and-science/">Philosophy and Science</a></span>
+      by
+      <a class="site-owner" href="https://github.com/cstrobbe">Christophe Strobbe</a>
+      is licensed under a
+      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" lang="en-US">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
     </p>
     <p>This website is a cookie-free zone.</p>
   </footer>
