--- a/humanities/index.html
+++ b/humanities/index.html
@@ -880,6 +880,9 @@
     <section>
       <h2>Miscellaneous Other Links</h2>
       <ul>
+        <li>
+          <a href="http://vos.ucsb.edu/">Voice of the Shuttle</a>.
+        </li>
         <li>Booth, Wayne C. (editor):
           <i class="booktitle">The Knowledge Most Worth Having</i>. University of Chicago Press, 1967. (226 pages)
           <a href="https://press.uchicago.edu/ucp/books/book/chicago/K/bo4342835.html"><abbr>ISBN</abbr> 9780226065762</a>.
