Add: Schlemm: Was vernünftig ist, das ist wirklich…

--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -241,6 +241,13 @@
           <a href="http://www.hegel-system.de/de/d0.htm" hreflang="de" lang="de">System der Wissenschaft</a>:
           website maintained by Martin Grimsmann.
         </li>
+        <li><span lang="de">Schlemm, Annette:
+          <a href="http://www.thur.de/philo/hegel/hegel40.htm" hreflang="de">Was vernünftig ist, das ist wirklich…</a>,
+          <i class="website">Virtuelles Philosophenstübchen</i></span> (accessed on 08.03.2021).
+          <!--@@see also https://duckduckgo.com/?q=whatever+is+vern%C3%BCnftig+is+real+hegel&t=ffab&ia=web
+            for https://literature.stackexchange.com/questions/6506/what-did-pope-intend-to-say-by-whatever-is-is-right
+          -->
+        </li>
         <li lang="de">Stadtbibliothek Stuttgart:
           <a href="http://www1.stuttgart.de/stadtbibliothek/bvs/ausgabe.php?sid=205">Georg Wilhelm Friedrich Hegel</a>.
         </li>
@@ -268,7 +275,8 @@
           <br />
         </li>
         <li>
-          <a href=""></a>
+          <a href=""></a>,
+          <i class="website"></i>.
         </li>
       </ul>
     </section>
