Add: Is there a universally accepted definition of what constitutes 'science' from a philosophy of science perspective?

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -1112,10 +1112,14 @@
       <li><a href="https://philosophy.stackexchange.com/q/68722/23586">Is economics a science?</a>
         This question was posted on Philosophy Stack Exchange in November 2019 and has severals answers that discuss the demarcation problem.
       </li>
-      <!--li>Shermer, Michael: 
+      <li>
+        <a href="https://philosophy.stackexchange.com/q/75739/23586">Is there a universally accepted definition of what constitutes 'science' from a philosophy of science perspective?</a>
+        This question was posted on Philosophy Stack Exchange in August 2020.
+      </li>
+      <!--li>Shermer, Michael:
         <a href="@@"><i>Scientia Humanitatis</i>: Reason, empiricism and skepticism are not virtues of science alone</a>,
         <i class="journal">Scientific American</i>, vol. 312, no. 6 (June 2015).
-      </li--><!-- referenced in Wikipedia article "logology"; @@check -->
+      </li--><!--referenced in Wikipedia article "logology"; @@check -->
       <!--@@check: Rens Bod (Univeristy of Amsterdam humanities professor - cited by Michael Shermer-->
     </ul>
     <!--"What's the distinction between a *narrative* and an *essay*?" https://literature.stackexchange.com/questions/8753/whats-the-distinction-between-a-narrative-and-an-essay
