Add: Milgram: Expérience sur l’obéissance et la désobéissance à l’autorité

--- a/science/index.html
+++ b/science/index.html
@@ -1256,6 +1256,11 @@
           <a href="https://www.tandfonline.com/doi/abs/10.1080/02699931.2015.1087972?journalCode=pcem20">Envy and admiration: emotion and motivation following upward social comparison</a>,
           <i class="journal">Cognition and Emotion</i>, Volume 31, Issue 1 (2017).
         </li>
+        <li><span lang="fr">Milgram, Stanley:
+          <i class="booktitle">Expérience sur l’obéissance et la désobéissance à l’autorité</i>. Traduit de l’anglais (États-Unis) par Claire Richard</span>. Zones, 2013. (172 pages)
+          <a href="https://www.editions-zones.fr/livres/experience-sur-l-obeissance-et-la-desobeissance-a-l-autorite/" hreflang="fr"><abbr>ISBN</abbr> 9782355220579</a>.
+          <br />La Découverte: <a href="https://www.editionsladecouverte.fr/experience_sur_l_obeissance_et_la_desobeissance_a_l_autorite-9782707194732" hreflang="fr"><abbr>ISBN</abbr> 9782707194732</a>.)
+        </li>
       </ul>
       <!--"The 25 Best Self Improvement Books To Read Before You Turn 25" Lifehack; last updated on 24.08.2018:
         1. Seth Godin: Whatcha Gonna Do with That Duck? And Other Provocations
