Add: Le Texier: Histoire d'un mensonge

--- a/science/index.html
+++ b/science/index.html
@@ -1261,6 +1261,10 @@
           <a href="https://www.editions-zones.fr/livres/experience-sur-l-obeissance-et-la-desobeissance-a-l-autorite/" hreflang="fr"><abbr>ISBN</abbr> 9782355220579</a>.
           <br />La Découverte: <a href="https://www.editionsladecouverte.fr/experience_sur_l_obeissance_et_la_desobeissance_a_l_autorite-9782707194732" hreflang="fr"><abbr>ISBN</abbr> 9782707194732</a>.)
         </li>
+        <li><span lang="fr">Le Texier, Thibault:
+          <i class="booktitle">Histoire d’un mensonge. Enquête sur l'expérience de Stanford</i></span>. Zones, 2018. (296 pages)
+          <a href="https://www.editions-zones.fr/livres/histoire-d-un-mensonge/" hreflang="fr"><abbr>ISBN</abbr> 9782355221200</a>.
+        </li>
       </ul>
       <!--"The 25 Best Self Improvement Books To Read Before You Turn 25" Lifehack; last updated on 24.08.2018:
         1. Seth Godin: Whatcha Gonna Do with That Duck? And Other Provocations
