--- a/lijst.html
+++ b/lijst.html
@@ -541,6 +541,10 @@
   <section id="misc">
     <h2>Various Other Topics</h2>
     <ul>
+      <li><span lang="fr">Le Texier, Thibault:
+        <i class="booktitle">Histoire d’un mensonge. Enquête sur l'expérience de Stanford</i></span>. Zones, 2018. (296 pages)
+        <a href="https://www.editions-zones.fr/livres/histoire-d-un-mensonge/" hreflang="fr"><abbr>ISBN</abbr> 9782355221200</a>.
+      </li>
       <li><span lang="fr">Klossowski, Pierre:
         <i class="booktitle">Un si funeste désir</i>. (1963) Collection L'Imaginaire. Gallimard, 1994. (224 pages)
         <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/L-Imaginaire/Un-si-funeste-desir" hreflang="fr"><abbr>ISBN</abbr> 9782070737420</a>.
@@ -678,7 +682,7 @@
         <a href="https://www.bloomsbury.com/uk/literary-criticism-in-the-21st-century-9781472527707/"><abbr>ISBN</abbr> 9781472527707</a>.
       </li>
       <li>Gazzaniga, Michael; Ivry, Richard B.; Mangun, George R.:
-        <i class="booktitle">Cognitive Neuroscience: The Bioogy of the Mind</i>. Fifth edition. Norton, 2019. (768 pages)
+        <i class="booktitle">Cognitive Neuroscience: The Biology of the Mind</i>. Fifth edition. Norton, 2019. (768 pages)
         <a href="https://wwnorton.com/books/9780393603170"><abbr>ISBN</abbr> 978-0-393-66780-6 (paperback)</a>.<!--out of stock, 18.01.2021-->
       </li>
       <li>Sandel, Michael J.:
