--- a/science/index.html
+++ b/science/index.html
@@ -1265,6 +1265,10 @@
           <i class="booktitle">Histoire d’un mensonge. Enquête sur l'expérience de Stanford</i></span>. Zones, 2018. (296 pages)
           <a href="https://www.editions-zones.fr/livres/histoire-d-un-mensonge/" hreflang="fr"><abbr>ISBN</abbr> 9782355221200</a>.
         </li>
+        <li><span lang="fr">
+          <i class="booktitle">KUBARK: Le manuel secret de manipulation mentale et de torture psychologique de la CIA</i>. Traduit de l’anglais (États-Unis) par Émilien et Jean-Baptiste Bernard. </span>. Zones, 2012. (192 pages)
+          <a href="https://www.editions-zones.fr/livres/kubark/" hreflang="fr"><abbr>ISBN</abbr> 9782355220456</a>.
+        </li>
       </ul>
       <!--"The 25 Best Self Improvement Books To Read Before You Turn 25" Lifehack; last updated on 24.08.2018:
         1. Seth Godin: Whatcha Gonna Do with That Duck? And Other Provocations
