Add: Jullien: La pensée chinoise

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2086,6 +2086,10 @@
         </li>
         <li><a href="https://onlinelibrary.wiley.com/journal/15406253">Journal of Chinese Philosophy</a>.
         </li>
+        <li><span lang="fr">Jullien, François:
+          <i class="booktitle">La pensée chinoise (De l'Être au Vivre). En vis-à-vis de la philosophie</i>. Collection Folio essais (<abbr>n°</abbr> 652). Gallimard,</span> 2019. (384 pages)
+          <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Folio/Folio-essais/La-pensee-chinoise" hreflang="fr">><abbr>ISBN</abbr> 9782072841682</a>.
+        </li>
         <li>Zhang, Wei:
           <i class="booktitle">What Is Enlightenment: Can China Answer Kant's Question?</i>.
           <abbr>SUNY</abbr> series in Chinese Philosophy and Culture. <abbr>SUNY</abbr> Press, 2010. (131 pages)
