Update Bakewell's list

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2471,13 +2471,14 @@
         </li>
         <li>Bakewell, Sarah:
           <a href="https://fivebooks.com/best-books/existentialism/">The Best Books on Existentialism</a>,
-          <i class="website">Five Books</i> (no date).
-          The recommendations are the following:
-          <i class="booktitle">Existentialism: A Reconstruction</i> by David Cooper,
-          <i class="booktitle">Nausea</i> by Jean-Paul Sartre,
-          <i class="booktitle">Man’s Search for Meaning</i> by Viktor Frankl,
-          <i class="booktitle">The Existentialist Reader</i> edited by Paul S. MacDonald,
-          <i class="booktitle">Heidegger: An Introduction</i> by Richard Polt.
+          <i class="website">Five Books</i>, 02.06.2013.
+          Bakewell, author of <i class="booktitle">At the Existentialist Café: Freedom, Being, and Apricot Cocktails</i>, recommends the following books:
+          <i class="booktitle">Existentialism: A Reconstruction</i> by David Cooper (1990, 1999),
+          <i class="booktitle">Nausea</i> by Jean-Paul Sartre (1938),
+          <i class="booktitle">Man’s Search for Meaning</i> by Viktor Frankl (1946),
+          <i class="booktitle">The Existentialist Reader</i> edited by Paul S. MacDonald (2001),
+          <!-- https://www.routledge.com/The-Existentialist-Reader-An-Anthology-of-Key-Texts/MacDonald/p/book/9780415936637 -->
+          <i class="booktitle">Heidegger: An Introduction</i> by Richard Polt (1999).
         </li>
         <li>Webber, Jonathan:
           <a href="https://fivebooks.com/best-books/underrated-existentialist-classics/">Five Underrated Existentialist Classics</a>,
