Add: Think in Public

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -891,6 +891,13 @@
           <i class="booktitle">Technologies of Knowing: A Proposal for the Human Sciences</i>. Beacon Press, 2000. (224 pages)
           <a href="https://www.penguinrandomhouse.com/books/204179/technologies-of-knowing-by-john-willinsky/"><abbr>ISBN</abbr> 9780807061077</a>.
         </li>
+        <li>Marcus, Sharon; Zaloom, Caitlin (editors):
+          <i class="booktitle">Think in Public: A Public Books Reader</i>. Columbia University Press, 2019. (520 pages)
+          <a href="https://cup.columbia.edu/book/think-in-public/9780231190091"><abbr>ISBN</abbr> 9780231190091</a>.
+          <br />From the publisher's book description:
+          <q>Since 2012, Public Books has championed a new kind of community for intellectual engagement, discussion, and action. An online magazine that unites the best of the university with the openness of the internet, Public Books is where new ideas are debuted, old facts revived, and dangerous illusions dismantled.
+          Here, young scholars present fresh thinking to audiences outside the academy, accomplished authors weigh in on timely issues, and a wide range of readers encounter the most vital academic insights and explore what they mean for the world at large. (&hellip;)</q>
+        </li>
         <li>
           <a href="https://www.youtube.com/watch?v=XmxIK9p0SNM">Tomatoes, or How Not To Define "Art"</a>
           (<i class="ytchannel">Innuendo Studios</i> on YouTube, 12 minutes, 02.01.2017).
