Add: Davies: Why Beliefs Matter

--- a/science/index.html
+++ b/science/index.html
@@ -224,10 +224,18 @@
         </li>
         <li>Davies, Brian E.:
           <i class="booktitle">Science in the Looking Glass: What Do Scientists Really Know?</i> Oxford University Press, 2003. (295 pages)
-          <abbr>ISBN</abbr> 978 0 19 921918 6.
+          <a href="https://global.oup.com/academic/product/science-in-the-looking-glass-9780199219186"><abbr>ISBN</abbr> 978 0 19 921918 6</a>.
           <br />Brian Davies is Professor of Mathematic at King's College, London. His book discusses how scientific questions have been solved in the past
           and why the scientific theories that will survive are probably those that are least mathematical.
           He also explains why philosophical questions are important in science.
+        </li>
+        <li>Davies, Brian E.:
+          <i class="booktitle">Why Beliefs Matter: Reflections on the Nature of Science</i>. Oxford University Press, 2014 (2010). (262 pages)
+          <a href="https://global.oup.com/academic/product/why-beliefs-matter-9780198704997"><abbr>ISBN</abbr> 9780198704997</a>.
+          <br />The publisher's book description:
+          <q>In the follow-up to his acclaimed <i class="booktitle">Science in the Looking Glass</i>, Brian Davies discusses deep problems about our place in the world, using a minimum of technical jargon. The book argues that 'absolutist' ideas of the objectivity of science, dating back to Plato, continue to mislead generations of both theoretical physicists and theologians.
+          It explains that the multi-layered nature of our present descriptions of the world is unavoidable, not because of anything about the world, but because of our own human natures. It tries to rescue mathematics from the singular and exceptional status that it has been assigned, as much by those who understand it as by those who do not.
+          Working throughout from direct quotations from many of the important contributors to its subject, it concludes with a penetrating criticism of many of the recent contributions to the often acrimonious debates about science and religions.</q>
         </li>
         <li>Goldacre, Ben:
           <a href="https://en.wikipedia.org/wiki/Bad_Science_%28book%29"
