Add: McGrath: The Territories of Human Reason

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -184,6 +184,10 @@
           <q>Science and religious faith are two of the most important and influential forces in human life, yet there is widespread confusion about how, or indeed whether, they link together. This book describes this combination from the perspective of one who finds that they link together productively and creatively. The situation is not one of conflict or uneasy tension, or even a respectful dialogue. Rather, a lively and well-founded faith in God embraces and includes science, and scientific ways of thinking, in their proper role. Science is an activity right in the bloodstream of a reasonable faith.
           <br />The book interprets theism broadly, and engages carefully with atheism, while coming from a Christian perspective. The aim is to show what science is, and what it is not, and at the same time give some pointers to what theism is or can be. Philosophy, evolution and the nature of science and human life are discussed in the first part of the book, questions of origins in the second.</q>
         </li>
+        <li>McGrath, Alister E.:
+          <i class="booktitle">The Territories of Human Reason: Science and Theology in an Age of Multiple Rationalities</i>. Ian Ramsey Centre Studies in Science and Religion. Oxford University Press, 2019. (304 pages)
+          <a href="https://global.oup.com/academic/product/the-territories-of-human-reason-9780198813101"><abbr>ISBN</abbr> 9780198813101</a>.
+        </li>
         <li>David Pakman Show:
           <a href="https://www.youtube.com/watch?v=BlWBsYx0Pag">What the Religious Don't Understand About Science</a>
           (YouTube, 14 minutes, 06.07.2016): interview with Sean Carroll, theoretical physicist at the California Institute of Technology
