Add: Rappe: Einführung in die moderne Phänomenologie

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2638,6 +2638,10 @@
           <a href="https://brill.com/view/title/38852?language=en"><abbr>ISBN</abbr> 978-90-04-41030-5 (ebook <abbr>PDF</abbr>; Open Access)</a>.
           <!--@@download -->
         </li>
+        <li><span lang="de">Rappe, Guido:
+          <i class="booktitle">Einführung in die moderne Phänomenologie. Phänomen - Leib - Subjektivität</i>. Projektverlag</span> (156 pages)
+          <a href="https://www.projektverlag.de/Wissenschaft/Philosophie/Einf%C3%BChrung-in-die-moderne-Ph%C3%A4nomenologie" hreflang="de"><abbr>ISBN</abbr> 978-3-89733-444-1</a>.
+        </li>
         <!--@@section Socrates:-->
         <li><span lang="de">Altrichter, Rudolf; Ehrensperger, Elisabeth:
           <i class="booktitle">Sokrates</i>. <abbr>UTB</abbr> Profile. Bern: Haupt</span>, 2010. (114 pages)
@@ -3331,9 +3335,13 @@
           <i class="booktitle"></i>.
           <a href=""><abbr>ISBN</abbr> </a>.
         </li>
+        <li><span lang="de">:
+          <i class="booktitle"></i>.</span>
+          <a href="" hreflang="de"><abbr>ISBN</abbr> </a>.
+        </li>
         <li><span lang="fr">:
           <i class="booktitle"></i>.</span>
-          <a href="" hreflang="fr">><abbr>ISBN</abbr> </a>.
+          <a href="" hreflang="fr"><abbr>ISBN</abbr> </a>.
         </li>
       </ul>
     </section>
