Add: Hindrichs: Zur kritischen Theorie. Honneth: Pathologien der Vernunft

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1374,6 +1374,14 @@
             @@Müller: https://www.nurgutebuecher.de/index.php?cl=details&steinscheid=13943594&lang=0&listtype=search&searchparam=Grand%20Hotel%20Abyss
           -->
         </li>
+        <li><span lang="de">Hindrichs, Gunnar:
+          <i class="booktitle">Zur kritischen Theorie</i>. Suhrkamp,</span> 2020. (267 pages)
+          <a href="https://www.suhrkamp.de/buecher/zur_kritischen_theorie-gunnar_hindrichs_29902.html" hreflang="de"><abbr>ISBN</abbr> 978-3-518-29902-9</a>.
+        </li>
+        <li><span lang="de">Honneth, Axel:
+          <i class="booktitle">Pathologien der Vernunft - Geschichte und Gegenwart der Kritischen Theorie</i>. Suhrkamp,</span> 2007. (239 pages)
+          <a href="https://www.suhrkamp.de/buecher/pathologien_der_vernunft-axel_honneth_29435.html" hreflang="de"><abbr>ISBN</abbr> 978-3-518-29435-2 </a>.
+        </li>
         <li>
           <a href="https://www.versobooks.com/lists/3982-critical-theory-verso-student-reading">Critical Theory: Verso Student Reading</a>,
           <i class="website">Verso</i>, 23.08.2020.
