Add: Morgan: The Thing about Religion

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -715,6 +715,10 @@
           <i class="magazine">Prospect Magazine</i>, 29.11.2019.
           This article does not appear to make a distinction between faith, religion and wishful thinking.
         </li>
+        <li>Morgan, David:
+          <i class="booktitle">The Thing about Religion: An Introduction to the Material Study of Religions</i>. University of North Carolina Press, 2021. (268 pages)
+          <a href="https://uncpress.org/book/9781469662831/the-thing-about-religion/"><abbr>ISBN</abbr> 978-1-4696-6283-1</a>.
+        </li>
         <li>Cameron, Averil:
           <a href="https://www.prospectmagazine.co.uk/magazine/religion-isnt-dead-its-just-taken-on-another-life">Religion isn’t dead—it’s just taken on another life</a>,
           <i class="magazine">Prospect Magazine</i>, 05.10.2019.
