Add: the trolley problem

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -343,6 +343,19 @@
         <a href="https://en.wikipedia.org/wiki/Onora_O%27Neill">Onora Sylvia O'Neill</a> (Wikipedia).
       </li>
     </ul>
+    <p>The trolley problem:</p>
+    <ul>
+      <li>
+        <a href="https://www.youtube.com/watch?v=bOpf6KcWYyw">The Trolley Problem</a>
+        (<i class="ytchannel"><abbr>BBC</abbr> Radio 4</i> on YouTube, 2 minutes, 18.11.2014).
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=8MjIU4eq__A">This Robot would let 5 People die | <abbr>AI</abbr> on Moral Questions | Sophia answers the Trolley Problem</a>
+        (<i class="ytchannel"><abbr>DW</abbr> Shift</i> on YouTube, 5 minutes, 14.06.2019).
+        <br />Sophia actually says, <q>If this is all the information I had, I would definitely not pull the lever; there might be other unknown complexities in the situation.
+        Plus, it does not seem right to consider human lives as if some arithmetic problem.</q>.
+      </li>
+    </ul>
   <!--
   <section>
     <h2></h2>
