Add: Reese: Why Microsoft's Tay AI bot went wrong

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -820,6 +820,10 @@
         <a href="https://www.singularityweblog.com/calum-chace-on-surviving-ai/">Calum Chace on Surviving <abbr>AI</abbr></a>,
         <i class="website">Singularity Weblog</i>, 12.02.2016.
       </li>
+      <li>Reese, Hope:
+        <a href="https://www.techrepublic.com/article/why-microsofts-tay-ai-bot-went-wrong/">Why Microsoft's 'Tay' <abbr>AI</abbr> bot went wrong</a>,
+        <i class="website">TechRepublic</i>, 24.03.2016.
+      </li>
       <li>Floridi, Luciano:
         <a href="https://aeon.co/essays/true-ai-is-both-logically-possible-and-utterly-implausible">Should we be afraid of <abbr>AI</abbr>?</a>,
         <i class="website">Aeon</i>, 09.05.2016 (updated 05.12.2017).
