--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -824,6 +824,10 @@
         <a href="https://www.techrepublic.com/article/why-microsofts-tay-ai-bot-went-wrong/">Why Microsoft's 'Tay' <abbr>AI</abbr> bot went wrong</a>,
         <i class="website">TechRepublic</i>, 24.03.2016.
       </li>
+      <li>
+        <a href="https://uk.pcmag.com/internet-3/76311/microsoft-puts-tay-chatbot-in-time-out-after-racist-tweets">Microsoft Puts Tay Chatbot in Time Out After Racist Tweets</a>,
+        <i class="website"><abbr>PC</abbr> Mag (<abbr>UK</abbr>)</i>, 24.03.2016.
+      </li>
       <li>Floridi, Luciano:
         <a href="https://aeon.co/essays/true-ai-is-both-logically-possible-and-utterly-implausible">Should we be afraid of <abbr>AI</abbr>?</a>,
         <i class="website">Aeon</i>, 09.05.2016 (updated 05.12.2017).
