Add: Frankish: Is great philosophy, by its nature, difficult and obscure?

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2032,11 +2032,10 @@
           Dennett's web page on the website of Tufts University.
           See also <a href="http://ase.tufts.edu/cogstud/dennett/bibliography.html">Dennett's bibliography</a>.
         </li>
-        <li><a href="https://twitter.com/danieldennett">Daniel Dennett on Twitter</a>.
-        </li>
+        <li><a href="https://twitter.com/danieldennett">Daniel Dennett on Twitter</a>.</li>
         <li>Zawidzki, Tadeusz:
           <i class="booktitle">Dennett</i>. Oneworld Thinkers.
-          Oneworld Publications,<!-- May --> 2007.
+          Oneworld Publications,<!--May--> 2007.
           <abbr>ISBN</abbr> 978-1-85168-484-7 (210 pages).
         </li>
         <li>Huebner, Bryce (editor):
@@ -2063,7 +2062,7 @@
         </li>
         <li>
           <a href="https://www.youtube.com/watch?v=GH1ilh0XnXI">My Chat with Dan Dennett (THE SAAD TRUTH_356)</a>
-          (YouTube, 55 minutes, 01.02.2017):
+          (<i class="ytchannel">Gad Saad</i> on YouTube, 55 minutes, 01.02.2017):
           interview by <a href="https://en.wikipedia.org/wiki/Gad_Saad">Gad Saad</a>.
           <!--@@check Saad's books!!-->
         </li>
@@ -2864,6 +2863,10 @@
           See also
           <a href="https://twitter.com/keithfrankish">Keith Frankish on Twitter</a>.
         </li>
+        <li>Frankish, Keith:
+          <a href="https://aeon.co/ideas/is-great-philosophy-by-its-nature-difficult-and-obscure">Is great philosophy, by its nature, difficult and obscure?</a>,
+          <i class="website">Aeon</i>, 11.11.2015 (Creative Commons).
+        </li>
         <li>
           <a href="https://write.as/formerly-known-as-a-philosopher/confession-of-an-ex-philosopher">Confessions of an Ex Philosopher</a>,
           <i class="blog">Formerly known as a philosopher</i>, 03.02.2020.
@@ -3350,6 +3353,10 @@
         <li><span lang="fr">:
           <i class="booktitle"></i>.</span>
           <a href="" hreflang="fr"><abbr>ISBN</abbr> </a>.
+        </li>
+        <li>
+          <a href=""></a>
+          (<i class="ytchannel"></i> on YouTube, minutes, ).
         </li>
       </ul>
     </section>
