Add: McGrade: The Cambridge Companion to Medieval Philosophy

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2640,6 +2640,11 @@
           <q>In a small literary gem full of sardonic wit, brilliant insights, and provocative criticism Witold Gombrowicz discusses
           Kant, Hegel, Schopenhauer, Kierkegaard, Sartre, and Heidegger in six "one-hour" essays—and addresses Marxism in a "fifteen-minute" piece.</q>
         </li>
+        <li>McGrade, A. S. (editor):
+          <i class="booktitle">The Cambridge Companion to Medieval Philosophy</i>. Cambridge Companions to Philosophy. Cambridge University Press, 2003. (424 pages)
+          <a href="https://www.cambridge.org/de/academic/subjects/philosophy/medieval-philosophy/cambridge-companion-medieval-philosophy?format=PB"><abbr>ISBN</abbr> 9780521000635</a>.
+          <!--CUP: £ 27.99; 27.03.2021: €29,50: nika-books: https://www.buchfreund.de/de/d/e/9780521000635/the-cambridge-companion-to-medieval-philosophy?bookId=95446365 -->
+        </li>
         <li>Airaksinen, Timo:
           <i class="booktitle">Vagaries of Desire: A Collection of Philosophical Essays</i>. Brill, 2019.
           <a href="https://brill.com/view/title/38852?language=en"><abbr>ISBN</abbr> 978-90-04-41030-5 (ebook <abbr>PDF</abbr>; Open Access)</a>.
