Add: Brush: Making 20th Century Science

--- a/science/index.html
+++ b/science/index.html
@@ -452,6 +452,10 @@
           Manchester University Press, 2000. (288 pages)
           <a href="https://manchesteruniversitypress.co.uk/9780719059940/"><abbr>ISBN</abbr> 978-0-7190-5994-0</a>.
         </li>
+        <li>Brush, Stephen G.:
+          <i class="booktitle">Making 20th Century Science: How Theories Became Knowledge</i>. Oxford University Press, 2015. (552 pages)
+          <a href="https://global.oup.com/academic/product/making-20th-century-science-9780199978151"><abbr>ISBN</abbr> 9780199978151 (hardcover)</a>.
+        </li>
         <!--li><a href="https://www.youtube.com/watch?v=PxkxCSyP60Y">Historical Myths About Science by John L. Heilbro</a>,
           recording of a speech at Washington and Lee University in March 2014.
           (John L. Heilbron's lecture starts at 7'54''.)
