Add: Beres: Microsoft Chat Bot Goes On Racist, Genocidal Twitter Rampage

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -828,6 +828,10 @@
         <a href="https://uk.pcmag.com/internet-3/76311/microsoft-puts-tay-chatbot-in-time-out-after-racist-tweets">Microsoft Puts Tay Chatbot in Time Out After Racist Tweets</a>,
         <i class="website"><abbr>PC</abbr> Mag (<abbr>UK</abbr>)</i>, 24.03.2016.
       </li>
+      <li>Beres, Damon:
+        <a href="https://www.huffpost.com/entry/microsoft-tay-racist-tweets_n_56f3e678e4b04c4c37615502">Microsoft Chat Bot Goes On Racist, Genocidal Twitter Rampage</a>,
+        <i class="website">HuffPost</i>, 28.03.2016.
+      </li>
       <li>Floridi, Luciano:
         <a href="https://aeon.co/essays/true-ai-is-both-logically-possible-and-utterly-implausible">Should we be afraid of <abbr>AI</abbr>?</a>,
         <i class="website">Aeon</i>, 09.05.2016 (updated 05.12.2017).
