--- a/philscience/index.html
+++ b/philscience/index.html
@@ -233,6 +233,20 @@
         University of Chicago Press, 2003. (288 p.)
         <a href="http://press.uchicago.edu/ucp/books/book/chicago/T/bo3622037.html"><abbr>ISBN</abbr>  9780226300634</a>.
       </li>
+      <li>Ladyman, James:
+        <i class="booktitle">Understanding Philosophy of Science</i>. Routledge, 2001. (304 pages)
+        <a href="https://www.routledge.com/Understanding-Philosophy-of-Science/Ladyman/p/book/9780415221573"><abbr>ISBN</abbr> 9780415221573</a>.
+        <br />From the publisher's book description:
+        <q>(&hellip;) In this exceptionally clear and engaging introduction to philosophy of science, James Ladyman explores the philosophical questions that arise when we reflect on the nature of the scientific method and the knowledge it produces.
+        He discusses whether fundamental philosophical questions about knowledge and reality might be answered by science, and considers in detail the debate between realists and antirealists about the extent of scientific knowledge.
+        Along the way, central topics in philosophy of science, such as the demarcation of science from non-science, induction, confirmation and falsification, the relationship between theory and observation and relativism are all addressed. (&hellip;)</q>
+        <!--
+          (In 2009, Massimo Pigliucci wrote, "Still, I'm planning to use this book next semester in a 300-level class on philosophy of science, and I'm looking forward to the puzzled reactions of my students when they'll begin to appreciate how little we understand about how science works." http://www.amazon.com/Understanding-Philosophy-Science-James-Ladyman/dp/0415221579/
+          Jamie House / @jamierhouse, 26.03.2021: https://twitter.com/jamierhouse/status/1375310820628905984
+              For the those new at philosophy of Science, James Ladyman’s Philosophy of Science is a masterclass at how to write clearly and to a less specialized audience.
+            Written in response to What Is It Like to Be a Philosopher? / @CliffordSosis 's question "Best philosophy book or paper you never read?": https://twitter.com/CliffordSosis/status/1375099435831721987
+        -->
+      </li>
       <li>Moulines, C. Ulises: 
         <span lang="fr"><i class="booktitle">La philosophie des sciences: l’invention d’une discipline (fin XIXe-début XXIe siècle)</i>. 
         Paris: Éditions Rue d’Ulm/Presses de l’École normale supérieure</span>, 2006.
@@ -287,10 +301,6 @@
         <i class="booktitle">Theorie der Wissenschaften</i></span>. Springer, 2019. (293 pages)
         <a href="https://www.springer.com/de/book/9783658212216"><abbr>ISBN</abbr> 978-3-658-21221-6</a>.
       </li>
-      <!-- 
-        * Ladyman, James: Understanding Philosophy of Science. Routledge, 2001. 
-          (In 2009, Massimo Pigliucci wrote, "Still, I'm planning to use this book next semester in a 300-level class on philosophy of science, and I'm looking forward to the puzzled reactions of my students when they'll begin to appreciate how little we understand about how science works." http://www.amazon.com/Understanding-Philosophy-Science-James-Ladyman/dp/0415221579/
-      -->
     </ul>
 
     <h2>Introductory Lectures (YouTube)</h2>
@@ -842,6 +852,7 @@
       <li>Gordin, Michael D.:
         <a href="http://bostonreview.net/science-nature-philosophy-religion/michael-d-gordin-quest-tell-science-pseudoscience">The Quest to Tell Science from Pseudoscience</a>,
         <i class="website">Boston Review</i>, 23.03.2021.
+        <!--Referrer: Nigel Warburton, 27.03.2021: https://twitter.com/philosophybites/status/1375598042527625218 -->
       </li>
       <li>Gordin, Michael D.:
         <i class="booktitle">On the Fringe: Where Science Meets Pseuoscience</i>. Oxford University Press, 2021. (136 pages)
